--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Indie+Flower&family=Overpass:ital,wght@0,100..900;1,100..900&family=Rubik+Vinyl&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <nav>Library</nav>
+    <main>
+      <div><button id="addBtn">+ Add Book</button></div>
+      <div class="library"></div>
+    </main>
+    <div class="addBtnPopupCont">
+      <h1>Add new book</h1>
+      <table>
+        <tr>
+          <td><input type="text" placeholder="Title" /></td>
+        </tr>
+        <tr>
+          <td><input type="text" placeholder="Author" /></td>
+        </tr>
+        <tr>
+          <td><input type="text" placeholder="Pages" /></td>
+        </tr>
+      </table>
+      <div><label for="readit">Have you read it?</label> <input id="readit" type="checkbox"></div>
+      <div><button id="submit">Submit</button></div>
+    </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
